--- a/blue_object_demo.ipynb
+++ b/blue_object_demo.ipynb
@@ -1,6 +1,17 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Using OpenCV to detect objects in an image \n",
+    "\n",
+    "The method that is implemented is a fast and rudimentary one - using its colors of the target in question. \n",
+    "\n",
+    "A series of operations will be performed to detect if an object is present in the image. If so, the largest object will in the image will be highlighted and a green circle will be drawn around it to indicate its position in the image."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
